--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.37",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
